# slam_karto

./: CMakeLists.txt
config/: costmap_common_params.yaml  karto_rviz.rviz  mapper_params.yaml  move_base.xml
launch/: karto_stage.launch  karto_test.launch
src/: ceres_solver.cpp  ceres_solver.h  g2o_solver.cpp  g2o_solver.h  karto_decision.cpp  karto_teleopt.cpp  slam_karto.cpp  spa_solver.h
src/g2o_karto/: CMakeLists.txt
src/open_karto/: CMakeLists.txt  Exception.h  Karto.h  Mapper.cpp  Mapper.h  Math.h  ScanMatcher.cpp  ScanMatcher.h  ScanMatcherBasedOptimize .h.bck  ScanMatcherBasedOptimize.cpp  ScanMatcherBasedOptimize.h  SensorDataManager.cpp  SensorDataManager.h  Types.h
src/spa/: csparse.cpp  csparse.h  spa2d.cpp  spa2d.h
worlds/: willow-pr2-5cm.world
